Added image for each of hairstyles, kittens and eye make up to index page and added links

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
-<h1>Hairstyles!</h1>
-<% @pin.each do |hairstyle| %>
-  <ul>
-    <li><%= hairstyle %></li>
-  </ul>
-<% end %>
+<h1>Pintrests &hearts; </h1>
+<p class="explanation">A collection of Pinterest images for hair styles, kittens & eye make up</p>
+  <li class="thumbnail"><a href="/hairstyles"><%= @pin_hair %></a></li>
+  <li class="thumbnail"><a href="/kittens"><%= @pin_kittens %></a></li>
+  <li class="thumbnail"><a href="/eyes"><%= @pin_eyes %></a></li>
+</ul>
