Changed some mis-spelt pintresets to pinterests

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Pintrests</title>
+    <title>My Pinterests</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Optional theme -->
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <div class="container">
 	  <ul class="nav navbar-nav">
-	    <li><a href="/">PINTRESTS</a></li>
+	    <li><a href="/">PINTERESTS</a></li>
 	  </ul>
 	  <ul class="nav navbar-nav navbar-right">
             <li><a href="/hairstyles">Hair Styles</a></li>
