--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Pintrests &hearts; </h1>
+<h1>Pinterests &hearts; </h1>
 <p class="explanation">A collection of Pinterest images for hair styles, kittens & eye make up</p>
   <li class="thumbnail"><a href="/hairstyles"><%= @pin_hair %></a></li>
   <li class="thumbnail"><a href="/kittens"><%= @pin_kittens %></a></li>
